# TFG_RaquelRomero

./: README.md  com-filter.py  decisiones.drawio  filter-bcc.py  filter-program.c  filter-program.skel.json  indice.odt  investigacion.md  package.json  run_TC.py  traffic-generator.py
Hello World/: minimal.bpf.c  package.json
Investigacion/: bpftrace.md  ebpf.md  iptables.md  miscelanea.md
TC Example/: TCexample.bpf.c  package.json  tc.skel.json
Virtual Interface/: package.json  virtualInterface.bpf.c  virtualInterface.skel.json
com-filter/: archivo.pcapng  certificateParser.py  com-filter.py  parser.py  pyproject.toml  testResolve.pcapng  traffic-generator.py
tls-parser/: tls-parser.py
tls-parser/classes/: __init__.py  client.py  peer.py  server.py  tls_connection.py
