[tool.poetry]
name = "com-filter"
version = "0.1.0"
description = "Filtering user's communication tool"
authors = ["Raquel Romero <raquelrp1426@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
